nieuw project toegevoegd

--- a/index.html
+++ b/index.html
@@ -53,6 +53,13 @@
                         <h3 nameclass="Name">3D sculptuur</h3>
                     </a>
                 </section>
+
+                <section class="projectCards">
+                    <img class=Thumbnail src="img/webservice.png">
+                    <a href="./eigenWebservice.html">
+                        <h3 nameclass="Name">eigen webservice</h3>
+                    </a>
+                </section>
             </section>
         </div>
     </section>
