aanpassingen aan de vormgeving

--- a/eigenWebservice.html
+++ b/eigenWebservice.html
@@ -45,7 +45,7 @@
 
                 <section class="afbeelding">
                     <img src="img/WebserviceScreenshot2.png">
-                    <h5>Zo de popup eruit. </h5> <br>
+                    <h5>Zo ziet de popup eruit. </h5> <br>
                 </section>
             </div>
         </div>
