--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
     <section class="links">
         <h2> links </h2>
         <li> <a href="https://www.linkedin.com/in/sam-middendorp-890a1720a/">Linkedin</a> </li>
-        <li> <a href="https://www.instagram.com/sammiddendorp/">insta</a> </Li>
+        <li> <a href="https://www.instagram.com/sammiddendorp/">Instagram</a> </Li>
     </section>
 
     <section class="contactForm">
